<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="elements"
            type="ch.epfl.sweng.favors.favors.FavorCreateFragment"
            />
        <import type="android.view.View" />

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/createFavorTitle"
            android:text="@{elements.fragmentTitle}"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RelativeLayout
            android:id="@+id/imageOfFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/createFavorTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.v7.widget.CardView
                android:id="@+id/view2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/favorImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/imageFavor"
                    app:srcCompat="@drawable/logo" />
            </android.support.v7.widget.CardView>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/uploadFavorPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/view2"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/browser_actions_divider_color"
                app:srcCompat="@drawable/upload_picture_gallery" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/uploadFavorPictureCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/view2"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/browser_actions_divider_color"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/upload_picture_camera" />
        </RelativeLayout>

        <EditText
            android:id="@+id/titleFavor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:hint="@string/titleFavor"
            android:importantForAutofill="no"
            android:inputType="text"

            android:text="@{elements.favorTitle}"

            app:layout_constraintTop_toBottomOf="@+id/imageOfFavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/checkFavorTitle"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.titleValid ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/titleFavor"
            app:layout_constraintStart_toEndOf="@+id/titleFavor"
            app:layout_constraintTop_toTopOf="@+id/titleFavor"/>


        <EditText
            android:id="@+id/descriptionFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/descriptionFavor"
            android:inputType="text"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:text="@{elements.favorDescription}"
            app:layout_constraintTop_toBottomOf="@+id/titleFavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/checkFavorDescription"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.descriptionValid ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionFavor"
            app:layout_constraintStart_toEndOf="@+id/descriptionFavor"
            app:layout_constraintTop_toTopOf="@+id/descriptionFavor" />


        <EditText
            android:id="@+id/locationFavor"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="20sp"
            android:text="@{elements.locationCity}"
            android:hint="@string/locationFavor"
            android:inputType="text"
            android:layout_marginEnd="110dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionFavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search"/>

        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationFavor"
            app:layout_constraintTop_toTopOf="@+id/locationFavor"
            app:layout_constraintStart_toEndOf="@+id/locationFavor"
/>

        <ImageView
            android:id="@+id/checkFavorLocation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.locationCityValid ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/locationFavor"
            app:layout_constraintStart_toEndOf="@+id/search"
            app:layout_constraintTop_toTopOf="@+id/locationFavor" />


        <TextView
            android:id="@+id/deadlineFavor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/deadlineFavor"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/locationFavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/checkdeadlineFavor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.deadlineValid ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/deadlineFavor"
            app:layout_constraintStart_toEndOf="@+id/deadlineFavor"
            app:layout_constraintTop_toTopOf="@+id/deadlineFavor" />

        <EditText
            android:id="@+id/nbTokens"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@{Long.toString(elements.tokenPerPers)}"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@+id/categoryFavor"
            app:layout_constraintBottom_toBottomOf="@+id/categoryFavor"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/nbTokenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" tk per "
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/categoryFavor"
            app:layout_constraintBottom_toBottomOf="@+id/categoryFavor"
            app:layout_constraintStart_toEndOf="@+id/nbTokens"/>

        <EditText
            android:id="@+id/nbPersons"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:text="@{Long.toString(elements.nbPerson)}"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@+id/categoryFavor"
            app:layout_constraintBottom_toBottomOf="@+id/categoryFavor"
            app:layout_constraintStart_toEndOf="@+id/nbTokenText"/>

        <TextView
            android:id="@+id/nbPersonsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="persons"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/categoryFavor"
            app:layout_constraintBottom_toBottomOf="@+id/categoryFavor"
            app:layout_constraintStart_toEndOf="@+id/nbPersons"/>

        <Spinner
            android:id="@+id/categoryFavor"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/categoryFavor"
            android:inputType="text"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/deadlineFavor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nbPersonsText"/>

        <Button
            android:id="@+id/addFavor"
            android:layout_width="300sp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:enabled="@{elements.titleValid &amp;&amp; elements.deadlineValid &amp;&amp; elements.descriptionValid &amp;&amp; elements.locationCityValid}"
            android:text="@{elements.validationButtonText}"
            app:layout_constraintTop_toBottomOf="@+id/categoryFavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/testFavorDetailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:text="Preview favor"
            app:layout_constraintTop_toBottomOf="@+id/addFavor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>

</layout>