...
                android:id="@+id/iconCategory"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="category icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="Favor Title"
                android:maxLength="25"
...
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:textAlignment="textEnd"
                    android:textColor="#000000"
                    android:layout_weight="2"
...
